Make dynamic connection properties fully configurable